--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,4 @@ spring:
         show_sql: true #띄어쓰기 8칸
         format_sql: true
         default_batch_fetch_size: 100
+        use_sql_comments: true
